2011-09-12  Michael Saboff  <msaboff@apple.com>

        Update RegExp and related classes to use 8 bit strings when available
        https://bugs.webkit.org/show_bug.cgi?id=67337

        Updated call to match to use UString& instead of UChar*.

        Reviewed by Gavin Barraclough.

        No new tests, Covered by existing tests.

        * platform/text/RegularExpression.cpp:
        (WebCore::RegularExpression::match):

2011-09-12  Beth Dakin  <bdakin@apple.com>

        https://bugs.webkit.org/show_bug.cgi?id=67898
        REGRESSION(r94900): fast/images/support-broken-image-delegate.html fails on Mac

        Reviewed by Simon Fraser.

        New function willPaintBrokenImage() returns true when there has been an error 
        loading the image and the broken image icon will be used in its place. This is 
        necessary since it is possible to have an error loading an image and to NOT use 
        the broken image icon. 
        * loader/cache/CachedImage.cpp:
        (WebCore::CachedImage::willPaintBrokenImage):
        * loader/cache/CachedImage.h:
        * rendering/RenderImage.cpp:
        (WebCore::RenderImage::imageSizeForError):

2011-09-12  James Robinson  <jamesr@chromium.org>

        [chromium] Move contents texture manager from LayerRendererChromium to CCLayerTreeHost
        https://bugs.webkit.org/show_bug.cgi?id=67440

        Reviewed by Kenneth Russell.

        This moves the contents TextureManager over to the CCLayerTreeHost, where it belongs, and adds in a commit path
        to make sure that textures are deleted even if the page is not visible.  This move also removed the need for
        LayerRendererChromium's CCLayerTreeHost pointer, so I removed that as well.  That meant moving the
        layerTreeAsText() logic over to the CCLayerImpl side, which is where it really belonged anyway.

        Covered by existing compositing/ tests and
        platform/chromium/compositor/lost-compositor-context-with-rendersurface.html
